update in employee picks and aside and reward-claimed

--- a/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
+++ b/client/webUI/src/app/pages/admin/employee-picks/employee-picks.component.html
@@ -53,7 +53,7 @@
           <span *ngIf="element.status === 'completed'" class="badge bg-success text-white p-2">
             {{ element.status }}
           </span>
-          <span *ngIf="element.status === 'pending'" class="badge bg-warning text-dark p-2">
+          <span *ngIf="element.status === 'pending'" class="badge bg-warning text-white p-2">
             {{ element.status }}
           </span>
         </td>
