--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.css
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.css
@@ -1,5 +1,23 @@
-.confirmation-card{      
-    left: 50%;    
+.confirmation-card {
+    left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
 }
+
+.badge {
+    border: 1px solid gray;
+    padding: 13px 20px;
+}
+
+.active {
+    background-color: black;
+    color: white;
+}
+
+.mdc-text-field {
+    padding: 0px !important;
+}
+
+/* .mat-mdc-form-field-infix{
+    padding-top: 0px !important;
+} */
