--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -3,7 +3,7 @@
     <a [routerLink]="['/admin/dashboard']" class="d-block text-white p-3 text-decoration-none">Dashboard</a>
     <a [routerLink]="['/admin/generate-emp-code']" class="d-block text-white p-3 text-decoration-none">Generate EmpCode</a>
     <a [routerLink]="['/admin/gift-inventory']" class="d-block text-white p-3 text-decoration-none">Gift Inventory</a>
-    <a [routerLink]="['/admin/employee-picks']" class="d-block text-white p-3 text-decoration-none">Employee Picks</a>
-    <a [routerLink]="['/admin/product-reports']" class="d-block text-white p-3 text-decoration-none">Product Reports</a>
+    <a [routerLink]="['/admin/employee-picks']" class="d-block text-white p-3 text-decoration-none">Employee Picks</a>   
+    <a [routerLink]="['/admin/feedback']" class="d-block text-white p-3 text-decoration-none">Feedback</a>   
     <a [routerLink]="['/admin/settings']" class="d-block text-white p-3 text-decoration-none">Settings</a>
 </nav>
