updated dialog box

--- a/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
+++ b/client/webUI/src/app/pages/employee/reward-claimed/reward-claimed.component.html
@@ -54,7 +54,7 @@
                     </span>
                 </div>
             </div>
-            <div class="mt-5 px-3">Do you have any thoughts you'd like to share?</div>
+            <div class="mt-5 px-2 pb-2">Do you have any thoughts you'd like to share?</div>
             <mat-form-field appearance="outline" class="d-block input-lg input">
                 <textarea matInput formControlName="productDescription" rows="5" class="w-100"></textarea>
                 <mat-error *ngIf="feedbackForm.get('productDescription')?.hasError('required')">
