update in profile image

--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.html
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.html
@@ -13,7 +13,7 @@
                     <p class="description">{{ card.description }}</p>
                     <!-- User Image and Name -->
                     <div class="user-info">
-                        <img [src]="card.image" alt="User Image" class="user-image">
+                        <img [src]="card.image" alt="User Image" class="user-image shadow-sm">
                         <span class="user-name">{{ card.name }}</span>
                     </div>
                 </mat-card-content>
