--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -8,7 +8,7 @@
           <h4 class="fw-bold mb-1">Name</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input w-100">
             <input matInput formControlName="adminName" />
-            <mat-icon matSuffix>vpn_key</mat-icon>
+            <mat-icon matSuffix>person</mat-icon>
             <mat-error>This is Required</mat-error>
           </mat-form-field>
         </span>
@@ -16,7 +16,7 @@
           <h4 class="fw-bold mb-1">Code</h4>
           <mat-form-field appearance="outline" class="d-block input-lg input w-100">
             <input matInput formControlName="adminKey" />
-            <mat-icon matSuffix>vpn_key</mat-icon>
+            <mat-icon matSuffix>redeem</mat-icon>
             <mat-error>This is Required</mat-error>
           </mat-form-field>
         </span>
