update in add emp code and settings

--- a/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/generate-emp-code/generate-emp-code.component.html
@@ -13,7 +13,7 @@
       <!-- /searchbar -->
       <!-- add product button -->
       <a mat-flat-button [routerLink]="['/admin/add-emp-code']"
-        class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"><mat-icon>add</mat-icon>
+        class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4"><mat-icon>person_add</mat-icon>
         <span>Add Employee Code</span>
       </a>
       <!-- /add product button -->
