--- a/client/webUI/src/app/pages/admin/settings/settings.component.html
+++ b/client/webUI/src/app/pages/admin/settings/settings.component.html
@@ -32,7 +32,7 @@
       <!-- button -->
       <div class="pt-3">
         <button mat-flat-button
-          class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4 mx-4"><mat-icon>add</mat-icon>
+          class="bg-dark shadow-sm button-mh-60 text-white px-5 py-4 mx-4"><mat-icon>person_add</mat-icon>
           <span>Add Admin</span>
         </button>
       </div>
