--- a/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
+++ b/client/webUI/src/app/pages/admin/add-emp-code/add-emp-code.component.html
@@ -27,7 +27,7 @@
                             <h4 class="fw-bold mb-1">Employee Name</h4>
                             <mat-form-field appearance="outline" class="d-block input-lg input">
                                 <input matInput formControlName="employeeName" />
-                                <mat-icon matSuffix>vpn_key</mat-icon>
+                                <mat-icon matSuffix>person</mat-icon>
                                 <mat-error>This is Required</mat-error>
                             </mat-form-field>
                             <h4 class="fw-bold mb-1">Department</h4>
