--- a/client/webUI/src/app/pages/admin/feedback/feedback.component.html
+++ b/client/webUI/src/app/pages/admin/feedback/feedback.component.html
@@ -1,4 +1,7 @@
 <section>
+    <div>
+        <h5 class="fw-bold mb-4">Feedbacks</h5>
+      </div>
     <div class="row">
         <div class="col-3" *ngFor="let card of cards">
             <mat-card class="bg-white shadow-sm product-reward-card p-3 h-100 justify-content-between" appearance="outlined">
