--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,9 +1,9 @@
 <!-- Sidebar -->
 <nav class="sidebar bg-dark shadow-sm h-100">
-    <a [routerLink]="['/admin/dashboard']" class="d-block text-white p-3 text-decoration-none">Dashboard</a>
-    <a [routerLink]="['/admin/generate-emp-code']" class="d-block text-white p-3 text-decoration-none">Generate EmpCode</a>
-    <a [routerLink]="['/admin/gift-inventory']" class="d-block text-white p-3 text-decoration-none">Gift Inventory</a>
-    <a [routerLink]="['/admin/employee-picks']" class="d-block text-white p-3 text-decoration-none">Employee Picks</a>   
-    <a [routerLink]="['/admin/feedback']" class="d-block text-white p-3 text-decoration-none">Feedbacks</a>   
-    <a [routerLink]="['/admin/settings']" class="d-block text-white p-3 text-decoration-none">Settings</a>
+    <a [routerLink]="['/admin/dashboard']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">home</mat-icon>Dashboard</a>
+    <a [routerLink]="['/admin/generate-emp-code']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">person_add</mat-icon>Generate EmpCode</a>
+    <a [routerLink]="['/admin/gift-inventory']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">redeem</mat-icon>Gift Inventory</a>
+    <a [routerLink]="['/admin/employee-picks']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">widgets</mat-icon>Employee Picks</a>   
+    <a [routerLink]="['/admin/feedback']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">chat</mat-icon>Feedbacks</a>
+    <a [routerLink]="['/admin/settings']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">settings</mat-icon>Settings</a>
 </nav>
