--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -6,11 +6,27 @@
         </div>
         <div class="header-links d-flex">
             <div class="d-flex align-items-center">
-                <a href="#" class="text-dark text-decoration-none">Profile</a>
-                <a href="#" class="px-3 text-dark text-decoration-none">Notifications</a>
-                <a mat-flat-button [routerLink]="['/admin-login-access']"
-                    class="bg-dark py-3 shadow-sm button-mh-45 text-white" (click)="logOut()">
-                    <mat-icon>power_settings_new</mat-icon> <span>Logout</span></a>
+                <mat-icon class="notifications">notifications</mat-icon>
+                <div class="mx-3">Piyush</div>
+                <div>
+                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                        <mat-icon>person</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>power_settings_new</mat-icon>
+                            <span [routerLink]="['/admin-login-access']" (click)="logOut()">Logout</span>
+                        </button>
+                        <button mat-menu-item disabled>
+                            <mat-icon>voicemail</mat-icon>
+                            <span>Check voice mail</span>
+                        </button>
+                        <button mat-menu-item>
+                            <mat-icon>notifications_off</mat-icon>
+                            <span>Disable alerts</span>
+                        </button>
+                    </mat-menu>
+                </div>                
             </div>
         </div>
     </header>
