update ui changes

--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,5 +1,9 @@
 <!-- Sidebar -->
 <nav class="sidebar bg-dark shadow-sm h-100">
+    <div class="logo-font p-3">
+        <span class="text-white fw-bold">Choice</span>
+        <span class="text-primary">Chase</span>
+    </div>
     <a [routerLink]="['/admin/dashboard']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">home</mat-icon>Dashboard</a>
     <a [routerLink]="['/admin/generate-emp-code']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">person_add</mat-icon>Generate EmpCode</a>
     <a [routerLink]="['/admin/gift-inventory']" class="d-flex text-white p-3 text-decoration-none"><mat-icon class="me-4">redeem</mat-icon>Gift Inventory</a>
