--- a/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,15 +1,17 @@
 <div class="dashboard-container d-flex flex-column vh-100">
-    <!-- Header -->
-    <app-header></app-header>
     <!-- Main Layout -->
     <div class="main-layout d-flex flex-grow-1">
         <!-- Sidebar -->
         <app-aside></app-aside>
         <!-- Main Content -->
-        <div class="main-content bg-light p-3 flex-grow-1">
-            <router-outlet></router-outlet>
+        <div class="main-content bg-light flex-grow-1">
+            <!-- Header -->
+            <app-header></app-header>
+            <div class="p-3">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
     <!-- Footer -->
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </div>
