--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,8 +1,7 @@
 <section class="bg-white border-bottom border-light">
     <header class="container-fluid d-flex justify-content-between align-items-center py-3">
-        <div class="logo-font">
-            <span class="text-dark fw-bold">Choice</span>
-            <span class="text-primary">Chase</span>
+        <div>
+            <mat-icon>menu</mat-icon>
         </div>
         <div class="header-links d-flex">
             <div class="d-flex align-items-center">
