--- a/client/webUI/src/app/shared/aside/aside.component.html
+++ b/client/webUI/src/app/shared/aside/aside.component.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<nav class="sidebar bg-dark shadow-sm h-100">
+<nav class="sidebar bg-dark shadow-sm h-100" [ngClass]="{'collapsed': !isSidebarOpen}">
     <div class="logo-font p-3">
         <span class="text-white fw-bold">Choice</span>
         <span class="text-primary">Chase</span>
