--- a/client/webUI/src/app/shared/header/header.component.html
+++ b/client/webUI/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <section class="bg-white border-bottom border-light">
     <header class="container-fluid d-flex justify-content-between align-items-center py-3">
-        <div>
+        <div (click)="toggleMenu()" style="cursor: pointer;">
             <mat-icon>menu</mat-icon>
         </div>
         <div class="header-links d-flex">
