update in dashboard

--- a/client/webUI/src/app/shared/aside/aside.component.css
+++ b/client/webUI/src/app/shared/aside/aside.component.css
@@ -1,7 +1,7 @@
 /* Sidebar */
 .sidebar {
     width: 250px;
-    transition: width 0.3s ease-in-out;
+    transition:  0.3s ease-in-out;
     overflow: hidden;    
 }
 
