--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class="row">
         <div class="col-8">
+            <!-- welcome admin -->
             <div class="row mb-4">
                 <mat-card class="bg-white shadow-sm product-reward-card p-3 position-relative" appearance="outlined">
                     <mat-card-content>
@@ -24,6 +25,8 @@
                     </mat-card-content>
                 </mat-card>
             </div>
+            <!-- /welcome admin -->
+            <!-- employees products employees -->
             <div class="row mb-4">
                 <div class="col-4">
                     <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
@@ -56,7 +59,10 @@
                     </mat-card>
                 </div>
             </div>
+            <!-- /employees products employees -->
+            <!-- upgrade data analytics -->
             <div class="row">
+                <!-- upgrade -->
                 <div class="col-6">
                     <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                         <mat-card-content>
@@ -74,6 +80,8 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
+                <!-- /upgrade -->
+                <!-- data analytics -->
                 <div class="col-6">
                     <div class="row">
                         <div class="col-12">
@@ -104,9 +112,11 @@
                         </div>
                     </div>
                 </div>
-                
+                <!-- /data analytics -->
             </div>
+            <!-- /upgrade data analytics -->
         </div>
+        <!-- transactions -->
         <div class="col-4">
             <mat-card class="bg-white shadow-sm product-reward-card p-3" appearance="outlined">
                 <mat-card-content>
@@ -208,7 +218,7 @@
                                                 <span class="badge bg-warning text-white">Pending</span>
                                             </div>
                                         </mat-card-content>
-                                    </mat-card>                                   
+                                    </mat-card>
                                 </div>
                             </div>
                         </mat-tab>
@@ -307,7 +317,7 @@
                                                 <span class="badge bg-success text-white">Completed</span>
                                             </div>
                                         </mat-card-content>
-                                    </mat-card>                                   
+                                    </mat-card>
                                 </div>
                             </div>
                         </mat-tab>
@@ -405,7 +415,7 @@
                                                 <span class="badge bg-warning text-white">Pending</span>
                                             </div>
                                         </mat-card-content>
-                                    </mat-card>                                   
+                                    </mat-card>
                                 </div>
                             </div>
                         </mat-tab>
@@ -414,5 +424,6 @@
                 </mat-card-content>
             </mat-card>
         </div>
+        <!-- /transactions -->
     </div>
 </section>
