--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -84,7 +84,7 @@
                             <div>
                                 <h5>Upgrade to Pro</h5>
                             </div>
-                            <div>
+                            <div class="text-center">
                                 <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="single"
                                     [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition"
                                     [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)"
