--- a/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/client/webUI/src/app/pages/admin/dashboard/dashboard.component.html
@@ -69,10 +69,22 @@
                             <div>
                                 <h5>Data Analytics Overview</h5>
                             </div>
-                            <div>From predictive modeling to real-time analysis, data analytics empowers
-                                businesses to stay ahead of the competition.""With the right data analytics
-                                tools, organizations can enhance efficiency, reduce risks, and improve customer
-                                experiences.</div>
+                            <div class="row">
+                                <div class="col-6">
+                                    From predictive modeling to real-time analysis, data analytics empowers
+                                    businesses to stay ahead of the competition.""With the right data analytics
+                                    tools, organizations can enhance efficiency, reduce risks, and improve customer
+                                    experiences.
+                                </div>
+                                <!-- grid pie chart -->
+                                <div class="col-6 grid-pie">
+                                    <ngx-charts-pie-grid [view]='[350, 250]' [scheme]="gridPieChartColorScheme" [results]="gridPieChartData"
+                                        (select)="onSelectGridPie($event)">
+                                    </ngx-charts-pie-grid>
+                                </div>
+                                <!-- /grid pie chart -->
+                            </div>
+
                         </mat-card-content>
                     </mat-card>
                 </div>
@@ -84,13 +96,15 @@
                             <div>
                                 <h5>Upgrade to Pro</h5>
                             </div>
-                            <div class="text-center">
-                                <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="single"
+                            <!-- pie chart -->
+                            <div class="pie-chart">
+                                <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="pieChartData"
                                     [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition"
                                     [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)"
                                     (activate)="onActivate($event)" (deactivate)="onDeactivate($event)">
                                 </ngx-charts-pie-chart>
                             </div>
+                            <!-- /pie chart -->
                             <div>
                                 From predictive modeling to real-time analysis, data analytics empowers
                                 businesses to stay ahead of the competition.""With the right data analytics
